--- a/profstyle.css
+++ b/profstyle.css
@@ -19,6 +19,7 @@ body {
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
+    overflow-x: hidden;
 }
 
 .section2 {
@@ -156,59 +157,85 @@ html {
     height: 1000px;
 }
 
-.l2 {
-    position:relative;
+.leaves {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.leaves div {
+    position: absolute;
     display: block;
-    float:left;
-    bottom:-500px;
-    left: 3%;
-    transition-duration: 10s;
-}
-.l1 {
-    display:flex;
-    float:right;
-    position: relative;
-    bottom:-600px;
-    right:5%;
-    transition-duration: 10s;
-}
-.l3 {
-    display:flex;
-    float:left;
-    position: relative;
-    bottom:-100px;
-    transition-duration: 10s;
-}
-.l4 {
-    display:flex;
-    float:right;
-    position: relative;
-    bottom:-200px;
-    transition-duration: 10s;
 }
 
-.l1:hover {
-    transform: translateY(250px)
-}
-.l2:hover {
-    transform: translateY(390px)
-}
-.l3:hover {
-    transform: translateY(740px)
-}
-.l4:hover {
-    transform: translateY(640px)
+.leaves div img {
+    height: 100px;
+    width: 80px;
+    flex-shrink: 0
 }
 
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+.leaves div:nth-child(1) {
+    left:2%;
+    animation: fallingLeaves 15s linear 1s infinite backwards
 }
+.leaves div:nth-child(2) {
+    left:15%;
+    animation: fallingLeaves 15s linear 3s infinite backwards;
+}
+.leaves div:nth-child(3) {
+    left:76%;
+    animation: fallingLeaves 15s linear 4s infinite backwards;
+}
+.leaves div:nth-child(4) {
+    left:88%;
+    animation: fallingLeaves 15s linear 6s infinite backwards;
+}
+.leaves div:nth-child(5) {
+    left:19%;
+    animation: fallingLeaves 15s linear 7s infinite backwards;
+}
+.leaves div:nth-child(6) {
+    left:8%;
+    animation: fallingLeaves 15s linear 10s infinite backwards;
+}
+.leaves div:nth-child(7) {
+    left:90%;
+    animation: fallingLeaves 15s linear 12s infinite backwards;
+}
+.leaves div:nth-child(8) {
+    left:72%;
+    animation: fallingLeaves 15s linear 15s infinite backwards;
+}
+.leaves div:nth-child(9) {
+    left:69%;
+    animation: fallingLeaves 15s linear 9s infinite backwards;
+}
+
+@keyframes fallingLeaves {
+    0% {
+        top:0%;
+        opacity: 0;
+        transform: translateX(10px) rotate(0deg);
+    }
+    10% {
+        opacity: 1;
+    }
+    20% {
+        transform: translateX(-10px) rotate(45deg);
+    }
+    40% {
+        transform: translateX(10px) rotate(90deg);
+    }
+    60% {
+        transform: translateX(-10px) rotate(45deg);
+    }
+    80% {
+        transform: translateX(10px);
+    }
+    100% {
+        top:100%;
+        transform: translateX(-10px);
+    }
+}
+
 
