--- a/profstyle.css
+++ b/profstyle.css
@@ -171,7 +171,7 @@ html {
 .leaves div img {
     height: 100px;
     width: 80px;
-    flex-shrink: 0
+    flex-shrink: 0;
 }
 
 .leaves div:nth-child(1) {
